styles/index.css
body {
    margin: 0;
    padding: 0;
    font-family: "Arial", sans-serif;
    color: #000;
}

.table-container {
    margin: 20px;
    background: rgba(255, 255, 255, 0.2);
    border-radius: 8px;
    padding: 10px;
    overflow-x: auto;
}

table {
    width: 100%;
    border-collapse: collapse;
}

th,
td {
    text-align: left;
    padding: 8px;
    border-bottom: 1px solid #ddd;
    color: #000;
}

th {
    background: rgba(255, 255, 255, 0.1);
}

@media (max-width: 600px) {
    .table-container {
        margin: 10px;
    }

    th,
    td {
        padding: 4px;
    }
}

.card {
    color: #000;
    margin: 1rem auto;
    width: 90%;
    max-width: 500px;
    min-height: 200px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.card-body {
    padding: 2rem;
}

.card-title {
    font-size: 1.5rem;
    margin-bottom: 1.5rem;
}

.card-text {
    font-size: 1rem;
    line-height: 1.6;
}

@media (max-width: 768px) {
    .button {
        padding: 20px 25px;
        font-size: 1.2rem;
    }
}

#typeselector .btn-group {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
}

#typeselector .btn {
    background-color: #6200ea;
    color: #ffffff;
    border: none;
    padding: 15px 20px;
    border-radius: 8px;
    font-size: 1rem;
    cursor: pointer;
    transition:
        transform 0.2s ease,
        background-color 0.3s ease;
    text-align: center;
    margin: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
}

@keyframes bounce {
    0% {
        transform: scale(1);
    }

    30% {
        transform: scale(1.2);
    }

    100% {
        transform: scale(1);
    }
}

#typeselector .btn:active {
    animation: bounce 0.5s ease forwards;
}

#typeselector .btn:hover {
    background-color: #7b61ff;
    transform: translateY(-2px);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
}

#typeselector .btn:active {
    background-color: #5642a6;
    transform: translateY(1px);
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
}

@media (max-width: 768px) {
    .btn {
        padding: 10px;
        font-size: 0.9rem;
        min-width: 120px;
    }
}

.footer {
    background-color: #f8f9fa;
    padding: 20px 0;
    margin-top: 40px;
    border-top: 1px solid #e7e7e7;
}

.container {
    max-width: 960px;
    margin: auto;
    padding: 0 15px;
}

.text-center {
    text-align: center;
}

.test-results {
    margin-top: 20px;
    padding: 0 5%;
    overflow-x: auto;
}

@media (max-width: 768px) {
    .test-results {
        padding: 0 10px;
    }
}

.correct-answer {
    background-color: #d4edda;
    color: #155724;
}

.incorrect-answer {
    background-color: #f8d7da;
    color: #721c24;
}

.congratulations-container {
    margin: 20px auto;
    padding: 20px;
    background-color: #f0f4c3;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    max-width: 600px;
    text-align: center;
}

.congratulations-container h2 {
    color: #388e3c;
    margin-bottom: 15px;
}

.congratulations-container p {
    color: #666;
    line-height: 1.6;
}

.large-font {
    font-size: 24px;
    font-weight: bold;
}

.small-font {
    font-size: 16px;
    color: grey;
}

.toggle-test-btn {
    background: none;
    border: none;
    cursor: pointer;
    padding: 10px;
    font-size: inherit;
}

.text-center {
    text-align: center;
}

.title-with-icon {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.title-with-icon img {
    max-height: 3.5rem;
}

nav {
    background-color: #004d40;
    padding: 1rem 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

nav a {
    color: white;
    text-decoration: none;
    margin: 0 15px;
    font-weight: 500;
    transition: color 0.3s;
}

nav a:hover {
    color: #b2dfdb;
}

.chart-container {
    max-width: 100%;
    overflow-x: auto;
    display: flex;
    justify-content: center;
}

.test-chart svg {
    width: 100%;
    height: auto;
}

@media (max-width: 768px) {
    .chart-container {
        padding: 0 10px;
    }

    .test-chart svg {
        max-width: 90%;
    }
}

@media (max-width: 480px) {
    .test-statistics-container {
        padding: 0 5px;
    }

    .test-chart svg {
        max-width: 100%;
    }
}

.explanation {
    max-width: 95%;
    margin: 20px auto;
    padding: 15px;
    border-radius: 5px;
    background-color: #f9f9f9;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.explanation h2,
h3 {
    color: #007bff;
    text-align: center;
    margin-bottom: 20px;
}

.explanation p,
li {
    font-size: 16px;
    line-height: 1.6;
    text-align: justify;
}

.explanation ul {
    margin: 20px 0;
    padding-left: 20px;
}

.explanation ol {
    margin-left: 20px;
}

@media (max-width: 768px) {
    .explanation {
        max-width: 90%;
        padding: 10px;
    }

    .explanation p,
    li {
        font-size: 14px;
    }
}

